Layout Test Commit

--- a/WebApplication-HomeAngularJS/Views/Shared/_Layout.cshtml
+++ b/WebApplication-HomeAngularJS/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - AngularJS Application</p>
+            <p>&copy; @DateTime.Now.Year - AngularJS Application-CaseStudy Application</p>
         </footer>
     </div>
 
