--- a/WebApplication-HomeAngularJS/app/views/Index.html
+++ b/WebApplication-HomeAngularJS/app/views/Index.html
@@ -8,9 +8,12 @@
         <p>Enter your comments:</p>
         <p>Name: <input type="text" ng-model="name"></p>
         <p>Comments: <input type="text" ng-model="comments"></p>
-        <div ng-bind="name"></div> Provided Comments:
-        <div ng-bind="comments"></div>
+        <button>SAVE</button>
 
+        <p>
+            <b ng-bind="name"></b> Provided Comments:
+            <b ng-bind="comments"></b>
+        </p>
     </div>
 
 </body>
