--- a/WebApplication-HomeAngularJS/Views/Home/Index.cshtml
+++ b/WebApplication-HomeAngularJS/Views/Home/Index.cshtml
@@ -1,31 +1,39 @@
-﻿<body ng-app>
+﻿@*<body ng-app>
     First Name: <input type="text" ng-model="fname" /><br />
     Last Name: <input type="text" ng-model="lname" /><br />
     <p ng-bind="fname"></p>
 </body>
-<script src="Scripts/angular.min.js"></script>  
+<script src="Scripts/angular.min.js"></script>*@  
 
-@*<div class="jumbotron">
-        <h1>ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-        <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-    </div>
-    <div class="row">
-     <div class="col-md-4">
-                <h2>Getting started</h2>
-                <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-                a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-                is an ideal platform for building RESTful applications on the .NET Framework.</p>
-                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Get more libraries</h2>
-                <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
-                <h2>Web Hosting</h2>
-                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-            </div>
-        </div>*@
+<div id="body">
+    <section class="content-wrapper main-content clear-fix">
+        <div>
+            <h2>All Categories</h2>
+        </div>
+        <div>
+            <table id="categories" style="border: 1px solid black;"></table>
+        </div>
+    </section>
+</div>
+@section scripts {
+    <script>
+        var apiCategories = 'api/category';
+        $(document).ready(function () {
+            // Send an AJAX request
+            var rows = '';
+            $('#categories').empty();
+            $.getJSON(apiCategories,
+                function (data) {
+                    $.each(data, function (key, val) {
+                        var categoryURL = apiCategories + '/' + val.ID;
+                        rows = rows + '<tr style="border: 1px solid black;"><td>  ' +
+                        '<a style="color: Blue; font-weight:bold; font-size:15px"'
+                           + 'href="' + categoryURL + '">' + val.ID + '</a>' +
+                            '</td><td>' + val.Name +
+                            '</td><td>' + val.AddedDate + '</td></tr>';
+                    });
+                    $('#categories').html(rows);
+                });
+        });
+    </script>
+}
