--- a/WebApplication-HomeAngularJS/app/components/home/homeView.html
+++ b/WebApplication-HomeAngularJS/app/components/home/homeView.html
@@ -1,10 +1,47 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>AngularhomeView</title>
+    <meta charset="utf-8" />
 </head>
 <body>
-
+    <form id="form1">
+        <div>
+            <br />
+            <table style="width: 60%;">
+                <tr>
+                    <td class="auto-style1">UserName:</td>
+                    <td>
+                        <input type="text" name="UserName"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="auto-style1">UserComment:</td>
+                    <td>
+                        <input type="text" name="UserComment" />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="auto-style1">Year:</td>
+                    <td>
+                        <input type="submit" name="submit" value="Submit">
+                    </td>
+                </tr>
+            </table>
+            <asp:GridView ID="gvBookStoreRecords" CellPadding="4" ForeColor="#333333" GridLines="None">
+                <AlternatingRowStyle BackColor="White" ForeColor="#284775" />
+                <EditRowStyle BackColor="#999999" />
+                <FooterStyle BackColor="#5D7B9D" Font-Bold="True" ForeColor="White" />
+                <HeaderStyle BackColor="#5D7B9D" Font-Bold="True" ForeColor="White" />
+                <PagerStyle BackColor="#284775" ForeColor="White" HorizontalAlign="Center" />
+                <RowStyle BackColor="#F7F6F3" ForeColor="#333333" />
+                <SelectedRowStyle BackColor="#E2DED6" Font-Bold="True" ForeColor="#333333" />
+                <SortedAscendingCellStyle BackColor="#E9E7E2" />
+                <SortedAscendingHeaderStyle BackColor="#506C8C" />
+                <SortedDescendingCellStyle BackColor="#FFFDF8" />
+                <SortedDescendingHeaderStyle BackColor="#6F8DAE" />
+            </asp:GridView>
+        </div>
+    </form>
 </body>
 </html>
